# Ankismart

./: .gitattributes  .gitignore  AGENTS.md  CODE_REVIEW_REPORT.md  ERROR_HANDLING_GUIDE.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.en.md  README.md  ankismart.iss  ankismart.spec  build.py  build_portable.py  pyproject.toml  test_validation.py  version_info.txt
.claude/agents/: backend-code-reviewer.md  project-lead.md  task-planner.md
.github/workflows/: auto-release.yml  build-packages.yml  e2e-fast.yml  e2e-gate.yml  quality-gate.yml
PyQt-Fluent-Widgets-master/examples/: README.md
docs/: AnkiSmart E2E自动化测试方案.md  AnkiSmart MVP 任务分解与核心需求文档.md  AnkiSmart 产品开发路径文档.md  AnkiSmart 产品需求文档.md  AnkiSmart 闪卡格式规范.md  OCR 模型目录与自动下载说明.md  QFluentWidgets Pro 调研与前端改动检查清单.md  api.md  architecture.md  changelog.md  contributing.md  design_specs.md  faq.md  user-guide-en.md  user-guide.md  项目全面审查报告.md
docs/examples/: README.md  sample.md
docs/plans/: 2026-03-12-app-experience-improvement-plan.md  2026-03-12-settings-page-redesign-design.md  2026-03-18-recoverable-smart-workbench.md  (+6 more)
examples/: README.md  sample-biology.md  sample-math.md  sample.md
packaging/: ankismart.iss  ankismart.spec  build.py  build_portable.py
plan/: 2026-02-11_11-01-42-mvp-stabilization.md
scripts/: dev_demo.py
style/: anki-card-format-cheatsheet.md  anki-card-format-dev-guide.md  anki-interactive-card-templates.md  card-style-spec-demo.html
tests/: conftest.py  test_headless_qt.py  test_import.py  test_packaging_build.py  test_startup.py  test_theme.py  test_validation.py  test_window.py
(+171 files in other folders)
